<resources>
    <string name="app_name">Pokémon Explorer</string>
    <string name="app_name_list">Pokémon List</string>
    <string name="welcome_message">Welcome</string>
    <string name="welcome_message_2">Let us explore Pokémon.</string>
    <string name="height">Height</string>
    <string name="category">Category</string>
    <string name="weight">Weight</string>
    <string name="ability">Ability</string>
    <string name="explore_button">LET US EXPLORE</string>
    <string name="explore_more_button">EXPLORE MORE</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="user_name_key">USER_NAME_KEY</string>
    <string name="pokemon_image">Pokemon image</string>

    <string-array name="images">
        <item>@drawable/bulbasur</item>
        <item>@drawable/ivysaur</item>
        <item>@drawable/venusaur</item>
        <item>@drawable/charmander</item>
        <item>@drawable/charmeleon</item>
        <item>@drawable/charizard</item>
        <item>@drawable/squirtle</item>
        <item>@drawable/wartortle</item>
        <item>@drawable/blastoise</item>
        <item>@drawable/caterpie</item>
    </string-array>

    <string-array name="pokemon_names">
        <item>Bulbasaur</item>
        <item>Ivysaur</item>
        <item>Venusaur</item>
        <item>Charmander</item>
        <item>Charmeleon</item>
        <item>Charizard</item>
        <item>Squirtle</item>
        <item>Wartortle</item>
        <item>Blastoise</item>
        <item>Caterpie</item>
    </string-array>

    <string-array name="pokemon_descriptions">
        <item>Bulbasaur can be seen napping in bright sunlight. There is a seed on its back. By soaking up the sun\'s rays, the seed grows progressively larger.</item>
        <item>There is a bud on this Pokémon\'s back. To support its weight, Ivysaur\'s legs and trunk grow thick and strong. If it starts spending more time lying in the sunlight, it\'s a sign that the bud will bloom into a large flower soon.</item>
        <item>There is a large flower on Venusaur\'s back. The flower is said to take on vivid colors if it gets plenty of nutrition and sunlight. The flower\'s aroma soothes the emotions of people.</item>
        <item>The flame that burns at the tip of its tail is an indication of its emotions. The flame wavers when Charmander is enjoying itself. If the Pokémon becomes enraged, the flame burns fiercely.</item>
        <item>Charmeleon mercilessly destroys its foes using its sharp claws. If it encounters a strong foe, it turns aggressive. In this excited state, the flame at the tip of its tail flares with a bluish white color.</item>
        <item>Charizard flies around the sky in search of powerful opponents. It breathes fire of such great heat that it melts anything. However, it never turns its fiery breath on any opponent weaker than itself.</item>
        <item>Squirtle\'s shell is not merely used for protection. The shell\'s rounded shape and the grooves on its surface help minimize resistance in water, enabling this Pokémon to swim at high speeds.</item>
        <item>Its tail is large and covered with a rich, thick fur. The tail becomes increasingly deeper in color as Wartortle ages. The scratches on its shell are evidence of this Pokémon\'s toughness as a battler.</item>
        <item>Blastoise has water spouts that protrude from its shell. The water spouts are very accurate. They can shoot bullets of water with enough accuracy to strike empty cans from a distance of over 160 feet.</item>
        <item>Perhaps because it would like to grow up quickly, it has a voracious appetite, eating a hundred leaves a day.</item>
    </string-array>

    <string-array name="pokemon_heights">
        <item>2\' 04\"</item>
        <item>3\' 03\"</item>
        <item>6\' 07\"</item>
        <item>2\' 00\"</item>
        <item>3\' 07\"</item>
        <item>5\' 07\"</item>
        <item>1\' 08\"</item>
        <item>3\' 03\"</item>
        <item>5\' 03\"</item>
        <item>1\' 00\"</item>
    </string-array>

    <string-array name="pokemon_categories">
        <item>Seed</item>
        <item>Seed</item>
        <item>Seed</item>
        <item>Lizard</item>
        <item>Flame</item>
        <item>Flame</item>
        <item>Tiny Turtle</item>
        <item>Turtle</item>
        <item>Shellfish</item>
        <item>Worm</item>
    </string-array>

    <string-array name="pokemon_weights">
        <item>15.20 lbs</item>
        <item>28.70 lbs</item>
        <item>220.50 lbs</item>
        <item>18.70 lbs</item>
        <item>41.90 lbs</item>
        <item>199.50 lbs</item>
        <item>19.80 lbs</item>
        <item>49.60 lbs</item>
        <item>188.50 lbs</item>
        <item>6.40 lbs</item>
    </string-array>

    <string-array name="pokemon_abilities">
        <item>Overgrow</item>
        <item>Overgrow</item>
        <item>Overgrow</item>
        <item>Blaze</item>
        <item>Blaze</item>
        <item>Blaze</item>
        <item>Torrent</item>
        <item>Torrent</item>
        <item>Torrent</item>
        <item>Shield Dust</item>
    </string-array>
</resources>