<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:letterSpacing="0.03"
            android:paddingTop="40dp"
            android:paddingBottom="10dp"
            android:text="@string/app_name"
            android:textColor="@color/dark_grey"
            android:textSize="32sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="269dp"
            android:layout_height="244dp"
            android:layout_gravity="center"
            android:src="@drawable/umbreon" />

    </LinearLayout>

    <EditText
        android:id="@+id/user"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:autofillHints="name"
        android:background="@color/eggplant"
        android:hint="@string/enter_your_name"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <Button
            android:id="@+id/recyclerViewActivityExploreMoreButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/bright_yellow"
            android:fontFamily="sans-serif-medium"
            android:minHeight="48dp"
            android:text="@string/explore_button"
            android:textColor="@color/dark_grey"
            android:textSize="16sp"
            android:textStyle="bold"
            app:cornerRadius="8dp"
            app:elevation="2dp" />

    </LinearLayout>
</LinearLayout>