<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true"
    tools:context=".PokemonListActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/titleLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/pokemonItemName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:letterSpacing="0.03"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textColor="@color/dark_grey"
                android:textSize="32sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:paddingEnd="16dp">

            <ImageView
                android:id="@+id/pokemonItemImage"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="12dp"
                android:contentDescription="@string/pokemon_image"
                android:elevation="2dp" />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:fontFamily="sans-serif"
                android:lineSpacingExtra="2dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textColor="@color/dark_grey"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="16dp"
                android:background="@color/bright_yellow"
                android:paddingStart="15dp"
                android:paddingEnd="15dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/heightRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="57dp"
                    android:layout_marginBottom="2dp"
                    android:checked="true"
                    android:fontFamily="sans-serif"
                    android:gravity="center_vertical"
                    android:minHeight="42dp"
                    android:paddingStart="6dp"
                    android:paddingTop="6dp"
                    android:paddingEnd="6dp"
                    android:paddingBottom="6dp"
                    android:scaleX="0.85"
                    android:scaleY="0.85"
                    android:text="@string/height"
                    android:textColor="@color/dark_grey"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/categoryRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="57dp"
                    android:layout_marginBottom="2dp"
                    android:fontFamily="sans-serif"
                    android:gravity="center_vertical"
                    android:minHeight="42dp"
                    android:paddingStart="6dp"
                    android:paddingTop="6dp"
                    android:paddingEnd="6dp"
                    android:paddingBottom="6dp"
                    android:scaleX="0.85"
                    android:scaleY="0.85"
                    android:text="@string/category"
                    android:textColor="@color/dark_grey"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/weightRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="57dp"
                    android:layout_marginBottom="2dp"
                    android:fontFamily="sans-serif"
                    android:gravity="center_vertical"
                    android:minHeight="42dp"
                    android:paddingStart="6dp"
                    android:paddingTop="6dp"
                    android:paddingEnd="6dp"
                    android:paddingBottom="6dp"
                    android:scaleX="0.85"
                    android:scaleY="0.85"
                    android:text="@string/weight"
                    android:textColor="@color/dark_grey"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/abilityRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="57dp"
                    android:layout_marginBottom="4dp"
                    android:fontFamily="sans-serif"
                    android:gravity="center_vertical"
                    android:minHeight="42dp"
                    android:paddingStart="6dp"
                    android:paddingTop="6dp"
                    android:paddingEnd="6dp"
                    android:paddingBottom="6dp"
                    android:scaleX="0.85"
                    android:scaleY="0.85"
                    android:text="@string/ability"
                    android:textColor="@color/dark_grey"
                    android:textSize="18sp" />
            </RadioGroup>

            <TextView
                android:id="@+id/itemDescription"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:backgroundTint="@color/burnt_yellow"
                android:fontFamily="sans-serif-medium"
                android:gravity="end|bottom"
                android:padding="4dp"
                android:textColor="@color/dark_grey"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <Button
                android:id="@+id/recyclerViewActivityExploreMoreButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/bright_yellow"
                android:fontFamily="sans-serif-medium"
                android:minHeight="48dp"
                android:text="@string/explore_more_button"
                android:textColor="@color/dark_grey"
                android:textSize="16sp"
                android:textStyle="bold"
                app:cornerRadius="8dp"
                app:elevation="2dp" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>